[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.5833
height = 13.0002

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.06194, 3.57077 )

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 2.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 187.468, 319.185 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -236.613, -26.9832 )
texture = ExtResource( 2 )
offset = Vector2( 236.613, 26.9832 )
vframes = 3
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.65846, 0.103302 )
shape = SubResource( 1 )

[node name="Timer_Swim" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer_Breath" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Punch_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Punch_Area"]
position = Vector2( 3.92917, -0.501587 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 3 )
[connection signal="timeout" from="Timer_Swim" to="." method="_on_Timer_Swim_timeout"]
[connection signal="timeout" from="Timer_Breath" to="." method="_on_Timer_Breath_timeout"]
